Fixing scaling issues on mobile

--- a/src/sass/responsive.scss
+++ b/src/sass/responsive.scss
@@ -234,7 +234,7 @@ $tablet: 1024px;
 
 @media screen and (min-width: 767px) and (max-width: 1400px) {
     #app {
-        transform: scale(1.4);
+        transform: scale(1.33);
     }
 
     .artist-card {
@@ -244,12 +244,8 @@ $tablet: 1024px;
 
 
 @media screen and (min-width: 767px) {
-    #app {
-        transform: scale(1.4);
-    }
-
     .scaling {
-        top: 50px;
+        top: 150px;
     }
 
     #clear-fix {
